test/files/neg/yimports-custom/C_2.scala

class C {
  val v: Numb = Magic
  def greet() = println("hello, world!")
}
